modif header + remove unused files

--- a/ogenix/files/header.html
+++ b/ogenix/files/header.html
@@ -10,9 +10,6 @@
                         <div class="main-header__top-left">
                             <p class="main-header__top-left-text">Welcome to our Organic Store Ogenix!</p>
                             <div class="main-header__social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
@@ -23,7 +20,7 @@
                                         <i class="fas fa-mobile"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="tel:923076806860">+ 92 ( 307 ) 68 - 06860</a></p>
+                                        <p><a href="tel:081252657775">+ 62 ( 812 ) 5265 - 7775</a></p>
                                     </div>
                                 </li>
                                 <li>
@@ -31,7 +28,7 @@
                                         <i class="fas fa-envelope-open"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="mailto:needhelp@company.com">needhelp@company.com</a></p>
+                                        <p> <a href="mailto:charlene@cayliani@gmail.com">charlene@cayliani@gmail.com</a></p>
                                     </div>
                                 </li>
                             </ul>
@@ -52,27 +49,15 @@
                                             <ul class="sub-menu">
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="team.html">Our Team</a></li>
-                                                <li><a href="team-carousel.html">Team Carousel</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#">Services</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="services.html">Services</a></li>
-                                            </ul>
+                                        <li>
+                                            <a href="services.html">Service</a>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#">Pages</a>
+                                            <a href="#">Information</a>
                                             <ul class="sub-menu">
-                                                <li><a href="portfolio.html">Portfolio</a></li>
-                                                <li><a href="portfolio-carousel.html">Portfolio Carousel</a>
-                                                </li>
-                                                <li><a href="portfolio-details.html">Portfolio Details</a></li>
                                                 <li><a href="testimonials.html">Testimonials</a></li>
-                                                <li><a href="testimonials-carousel.html">Testimonials
-                                                        Carousel</a></li>
-                                                <li><a href="pricing.html">Pricing</a></li>
-                                                <li><a href="pricing-carousel.html">Pricing Carousel</a></li>
                                                 <li><a href="faq.html">FAQs</a></li>
                                             </ul>
                                         </li>
