full modify web

--- a/ogenix/files/about.html
+++ b/ogenix/files/about.html
@@ -163,86 +163,7 @@
         </section>
         <!--About Three End-->
 
-        <!--Counter One Start-->
-        <section class="counter-one">
-            <div class="counter-one__bg"
-                style="background-image: url(assets/images/backgrounds/counter-one-bg-img.png);"></div>
-            <div class="container">
-                <ul class="counter-one__inner list-unstyled">
-                    <li class="counter-one__single">
-                        <div class="counter-one__icon">
-                            <i class="icon-customer-service"></i>
-                        </div>
-                        <div class="counter-one__content count-box">
-                            <h3 class="count-text" data-stop="154" data-speed="1500">00</h3>
-                            <p class="counter-one__text">Happy customers</p>
-                        </div>
-                    </li>
-                    <li class="counter-one__single">
-                        <div class="counter-one__icon">
-                            <i class="icon-farmer-1"></i>
-                        </div>
-                        <div class="counter-one__content count-box">
-                            <h3 class="count-text" data-stop="163" data-speed="1500">00</h3>
-                            <p class="counter-one__text">Expert farmers</p>
-                        </div>
-                    </li>
-                    <li class="counter-one__single">
-                        <div class="counter-one__icon">
-                            <i class="icon-agriculture"></i>
-                        </div>
-                        <div class="counter-one__content count-box">
-                            <h3 class="count-text" data-stop="360" data-speed="1500">00</h3>
-                            <p class="counter-one__text">New products</p>
-                        </div>
-                    </li>
-                    <li class="counter-one__single">
-                        <div class="counter-one__icon">
-                            <i class="icon-trophy"></i>
-                        </div>
-                        <div class="counter-one__content count-box">
-                            <h3 class="count-text" data-stop="22" data-speed="1500">00</h3>
-                            <p class="counter-one__text">Awards winning</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Counter One End-->
-
-        <!--Video One Start-->
-        <section class="video-one">
-            <div class="video-one-bg jarallax" data-jarallax data-speed="0.2" data-imgPosition="50% 0%"
-                style="background-image: url(assets/images/backgrounds/video-one-bg.jpg)"></div>
-            <div class="video-one-border"></div>
-            <div class="video-one-border video-one-border-two"></div>
-            <div class="video-one-border video-one-border-three"></div>
-            <div class="video-one-border video-one-border-four"></div>
-            <div class="video-one-border video-one-border-five"></div>
-            <div class="video-one-border video-one-border-six"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="video-one__inner">
-                            <div class="video-one__video-link">
-                                <a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
-                                    <div class="video-one__video-icon">
-                                        <span class="fa fa-play"></span>
-                                        <i class="ripple"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="video-one__shape">
-                                <img src="assets/images/shapes/video-one-shape-1.png" alt="">
-                            </div>
-                            <h2 class="video-one__video-title">Be healthy & eat only
-                                <br> fresh organic vegetables</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Video One End-->
+       
 
         <!--Brand Two Start-->
         <section class="brand-one brand-two">
@@ -315,120 +236,6 @@
         </section>
         <!--Brand Two End-->
 
-        <!--Team Two Start-->
-        <section class="team-two">
-            <div class="container">
-                <div class="section-title text-center">
-                    <span class="section-title__tagline">Meet the Farmers</span>
-                    <h2 class="section-title__title">Awesome farmers team <br> here to help you</h2>
-                </div>
-                <div class="row">
-                    <!--Team Two Single Start-->
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="team-two__single">
-                            <div class="team-two__img-box">
-                                <div class="team-two__shape-4">
-                                    <img src="assets/images/shapes/team-two-shape-4.png" alt="">
-                                </div>
-                                <div class="team-two__shape-1">
-                                    <img src="assets/images/shapes/team-two-shape-1.png" alt="">
-                                    <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="team-two__content">
-                                <div class="team-two__shape-2">
-                                    <img src="assets/images/shapes/team-two-shape-2.png" alt="">
-                                </div>
-                                <div class="team-two__shape-3">
-                                    <img src="assets/images/shapes/team-two-shape-3.png" alt="">
-                                </div>
-                                <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Kevin martin</a></h3>
-                                    <p class="team-two__sub-title">Senior Farmer</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Team Two Single End-->
-                    <!--Team Two Single Start-->
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
-                        <div class="team-two__single">
-                            <div class="team-two__img-box">
-                                <div class="team-two__shape-4">
-                                    <img src="assets/images/shapes/team-two-shape-4.png" alt="">
-                                </div>
-                                <div class="team-two__shape-1">
-                                    <img src="assets/images/shapes/team-two-shape-1.png" alt="">
-                                    <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-2.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="team-two__content">
-                                <div class="team-two__shape-2">
-                                    <img src="assets/images/shapes/team-two-shape-2.png" alt="">
-                                </div>
-                                <div class="team-two__shape-3">
-                                    <img src="assets/images/shapes/team-two-shape-3.png" alt="">
-                                </div>
-                                <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Aleesha brown</a></h3>
-                                    <p class="team-two__sub-title">Senior Farmer</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Team Two Single End-->
-                    <!--Team Two Single Start-->
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="team-two__single">
-                            <div class="team-two__img-box">
-                                <div class="team-two__shape-4">
-                                    <img src="assets/images/shapes/team-two-shape-4.png" alt="">
-                                </div>
-                                <div class="team-two__shape-1">
-                                    <img src="assets/images/shapes/team-two-shape-1.png" alt="">
-                                    <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-3.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="team-two__content">
-                                <div class="team-two__shape-2">
-                                    <img src="assets/images/shapes/team-two-shape-2.png" alt="">
-                                </div>
-                                <div class="team-two__shape-3">
-                                    <img src="assets/images/shapes/team-two-shape-3.png" alt="">
-                                </div>
-                                <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Mike hardson</a></h3>
-                                    <p class="team-two__sub-title">Senior Farmer</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Team Two Single End-->
-                </div>
-            </div>
-        </section>
-        <!--Team Two End-->
 
         <!--Subscribe One Start-->
         <section class="subscribe-one">
@@ -591,12 +398,12 @@
                 document.getElementById('header').innerHTML = data;
             });
 
-        // // Load footer.html jika ada
-        // fetch('footer.html')
-        //     .then(response => response.text())
-        //     .then(data => {
-        //         document.getElementById('footer').innerHTML = data;
-        //     });
+        // Load footer.html jika ada
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            });
     </script>
 
 
