--- a/ogenix/files/header.html
+++ b/ogenix/files/header.html
@@ -5,36 +5,6 @@
                 <a href="index.html"><img src="assets/images/resources/logo-1.png" alt="" width="104" height="63"></a>
             </div>
             <div class="main-header__right">
-                <div class="main-header__top">
-                    <div class="main-header__top-inner">
-                        <div class="main-header__top-left">
-                            <p class="main-header__top-left-text">Welcome to our Organic Store Ogenix!</p>
-                            <div class="main-header__social">
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="main-header__top-right">
-                            <ul class="list-unstyled main-header__contact-list">
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-mobile"></i>
-                                    </div>
-                                    <div class="text">
-                                        <p><a href="tel:081252657775">+ 62 ( 812 ) 5265 - 7775</a></p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-envelope-open"></i>
-                                    </div>
-                                    <div class="text">
-                                        <p> <a href="mailto:charlene@cayliani@gmail.com">charlene@cayliani@gmail.com</a></p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 <div class="main-header__right-bottom">
                     <nav class="main-menu">
                         <div class="main-menu__wrapper">
@@ -51,26 +21,11 @@
                                                 <li><a href="team.html">Our Team</a></li>
                                             </ul>
                                         </li>
-                                        <li>
-                                            <a href="services.html">Service</a>
-                                        </li>
                                         <li class="dropdown">
                                             <a href="#">Information</a>
                                             <ul class="sub-menu">
                                                 <li><a href="testimonials.html">Testimonials</a></li>
                                                 <li><a href="faq.html">FAQs</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#">Shop</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="products.html">Products</a></li>
-                                                <li><a href="product-list.html">Product List</a></li>
-                                                <li><a href="product-details.html">Product Details</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="my-account.html">My Account</a></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -91,7 +46,7 @@
                                             </div>
                                         </div>
                                         <div class="main-menu__btn-box">
-                                            <a href="product-details.html" class="thm-btn main-menu__btn">Shop
+                                            <a href="products.html" class="thm-btn main-menu__btn">Shop
                                                 now</a>
                                         </div>
                                     </div>
