--- a/ogenix/files/cart.html
+++ b/ogenix/files/cart.html
@@ -365,12 +365,12 @@
                 document.getElementById('header').innerHTML = data;
             });
 
-        // // Load footer.html jika ada
-        // fetch('footer.html')
-        //     .then(response => response.text())
-        //     .then(data => {
-        //         document.getElementById('footer').innerHTML = data;
-        //     });
+        // Load footer.html jika ada
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            });
     </script>
 
 </body>
