--- a/ogenix/files/cart.html
+++ b/ogenix/files/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Cart || ogenix || ogenix HTML 5 Template </title>
+    <title> Cart </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -206,61 +206,9 @@
         </section>
         <!--End Cart Page-->
 
-        <!--Subscribe One Start-->
-        <section class="subscribe-one">
-            <div class="container">
-                <div class="subscribe-one__inner">
-                    <div class="subscribe-one__shape-1 float-bob-x">
-                        <img src="assets/images/shapes/subscribe-one-shape-1.png" alt="">
-                    </div>
-                    <div class="subscribe-one__shape-2 float-bob-y">
-                        <img src="assets/images/shapes/subscribe-one-shape-2.png" alt="">
-                    </div>
-                    <div class="subscribe-one__shape-4 float-bob-y">
-                        <img src="assets/images/shapes/subscribe-one-shape-4.png" alt="">
-                    </div>
-                    <div class="subscribe-one__shape-5 zoominout">
-                        <img src="assets/images/shapes/subscribe-one-shape-5.png" alt="">
-                    </div>
-                    <div class="subscribe-one__inner-content">
-                        <div class="subscribe-one__shape-3 float-bob-x">
-                            <img src="assets/images/shapes/subscribe-one-shape-3.png" alt="">
-                        </div>
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <div class="subscribe-one__left">
-                                    <div class="icon">
-                                        <span class="icon-folder"></span>
-                                    </div>
-                                    <div class="subscribe-one__title-box">
-                                        <span class="subscribe-one__tagline">Quisque vel ortor</span>
-                                        <h2 class="subscribe-one__title">Subscribe to newsletter</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="subscribe-one__right">
-                                    <div class="subscribe-one__shape-6 float-bob-x">
-                                        <img src="assets/images/shapes/subscribe-one-shape-6.png" alt="">
-                                    </div>
-                                    <div class="subscribe-one__form-box">
-                                        <form class="subscribe-one__form mc-form" data-url="MC_FORM_URL">
-                                            <div class="subscribe-one__input-box">
-                                                <input type="email" placeholder="Email Address" name="email">
-                                                <button type="submit" class="subscribe-one__btn"><i
-                                                        class="fas fa-paper-plane"></i></button>
-                                            </div>
-                                        </form>
-                                        <div class="mc-form__response"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Subscribe One End-->
+       <!--Site Footer Start-->
+       <div id="footer"></div>
+       <!--Site Footer End-->
 
 
     </div><!-- /.page-wrapper -->
