--- a/ogenix/files/contact.html
+++ b/ogenix/files/contact.html
@@ -134,8 +134,8 @@
                                 <span class="icon-maps-and-flags"></span>
                             </div>
                             <div class="content">
-                                <p>Universitas Ciputra Surabaya</p>
-                                <h4>CitraLand CBD Boulevard, Made, Kec. Sambikerep, Surabaya, Jawa Timur</h4>
+                                <p>Contact Instagram</p>
+                                <h4>@desauge.id</h4>
                             </div>
                         </li>
                        
