--- a/ogenix/files/testimonials.html
+++ b/ogenix/files/testimonials.html
@@ -168,6 +168,20 @@
                         </div>
                     </div>
                     <!--Testimonial Two Single End-->
+                </div>
+            </div>
+        </section>
+        <!--Testimonials Page End-->
+
+        <div class="section-title text-center">
+            <h2 class="section-title__title">Let hear the testimonials from our
+                <br>Experts</h2>
+        </div>
+
+        <!--Testimonials Page Start-->
+        <section class="testimonials-page">
+            <div class="container">
+                <div class="row">
                     <!--Testimonial Two Single Start-->
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
@@ -177,12 +191,12 @@
                                     text.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Alisha martin</h4>
+                                <h4 class="testimonial-two__client-name">Kevin martin</h4>
                                 <p class="testimonial-two__client-sub-title">Customer</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-4.jpg" alt="">
+                                    <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -200,12 +214,12 @@
                                     text.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Fokrul prava</h4>
+                                <h4 class="testimonial-two__client-name">Nadhia brava</h4>
                                 <p class="testimonial-two__client-sub-title">Customer</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-5.jpg" alt="">
+                                    <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -223,12 +237,12 @@
                                     text.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Jessica brown</h4>
+                                <h4 class="testimonial-two__client-name">Thomas born</h4>
                                 <p class="testimonial-two__client-sub-title">Customer</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-6.jpg" alt="">
+                                    <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -241,6 +255,7 @@
             </div>
         </section>
         <!--Testimonials Page End-->
+
 
         <!--Site Footer Start-->
         <div id="footer"></div>
