--- a/ogenix/files/footer.html
+++ b/ogenix/files/footer.html
@@ -1,23 +1,15 @@
 <footer class="site-footer">
-    <div class="site-footer__bg "
-        style="background-image: url(assets/images/backgrounds/site-footer-bg-img.png);"></div>
-    <div class="site-footer__ripped-paper"
-        style="background-image: url(assets/images/shapes/site-footer-ripped-paper.png);"></div>
+    <div class="site-footer__bg" style="background-image: url(assets/images/backgrounds/site-footer-bg-img.png);"></div>
     <div class="container">
         <div class="site-footer__top">
             <div class="row">
                 <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                     <div class="footer-widget__column footer-widget__about">
                         <div class="footer-widget__logo">
-                            <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt="" width="200" height="200" ></a>
+                            <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt="" width="200" height="200"></a>
                         </div>
                         <div class="footer-widget__about-text-box">
-                            <p class="footer-widget__about-text">We’re Providing Everyday Fresh <br> and
-                                Quality
-                                Products.</p>
-                        </div>
-                        <div class="footer-widget__social-box">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <p class="footer-widget__about-text">We’re Providing Everyday Fresh <br> and Quality Products.</p>
                         </div>
                     </div>
                 </div>
@@ -41,8 +33,7 @@
                         </ul>
                     </div>
                 </div>
-
-                <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                     <div class="footer-widget__column footer-widget__explore">
                         <div class="footer-widget__title-box">
                             <h3 class="footer-widget__title">Explore</h3>
@@ -54,6 +45,11 @@
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
+                    <div class="footer-widget__logo">
+                        <img src="assets/images/footer/halal_logo.png" alt="Halal Logo" width="100" height="100" >
                     </div>
                 </div>
             </div>
